# stealth-signal

./: README.md
api/: .env  pyproject.toml
api/src/api/: __init__.py  config.py  extensions.py  factory.py  settings.py
api/src/api/blueprints/comms/: routes.py
api/src/api/blueprints/portal/: forms.py  queries.py  routes.py
api/src/api/blueprints/portal/templates/portal/: contact_form.html  create_estimate_from_x.html  home.html  portal.html
api/src/api/blueprints/public/: forms.py  routes.py
api/src/api/blueprints/public/templates/public/: about.html  contact.html  index.html  public.html  services.html  testimonials.html
api/src/api/static/css/: style.css
server/: .env  go.mod  go.sum  main.go
server/data/: group.go  keys.go  schema.go
server/handler/: handler.go  routes.go
server/instance/: development.db
server/util/: crypto.go
